# ts_rust_admin_backend

./: .env  Cargo.toml  Dockerfile
data/: data.db
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/entity/: fixed_data.rs  user.rs
src/enum/: fixed_data.rs
src/enums/: fixed_data.rs  mod.rs  user.rs
src/handlers/: course.rs  fixed_data.rs  health.rs  mod.rs  simple_string.rs  user.rs
src/middleware/: auth.rs
src/models/: course.rs  mod.rs  user.rs
src/utils/: response.rs
