[package]
name = "admin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
futures = "0.3" 
md-5 = "0.10"
digest = "0.10"